[gd_scene load_steps=2 format=3 uid="uid://btcdvjuk2ku18"]

[ext_resource type="Script" path="res://addons/diisis/editor/src/choice_container.gd" id="1_22qh4"]

[node name="ChoiceContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22qh4")

[node name="Controls" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AddButton" type="Button" parent="Controls"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "+"

[node name="JumpPageButton" type="CheckBox" parent="Controls"]
visible = false
layout_mode = 2
focus_mode = 0
text = "jump page (override)"

[node name="AutoSwitchButton" type="CheckBox" parent="Controls"]
layout_mode = 2
tooltip_text = "When enabled, the line reader will go to the specified page of a choice item if its conditionals are empty or evaluate to true, in ascending order of indices. Needs \"jump page\" enabled to work."
focus_mode = 0
text = "auto switch"

[node name="ChoiceList" type="VBoxContainer" parent="."]
layout_mode = 2

[connection signal="pressed" from="Controls/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="Controls/JumpPageButton" to="." method="_on_jump_page_button_pressed"]
[connection signal="pressed" from="Controls/AutoSwitchButton" to="." method="_on_auto_switch_button_pressed"]
